test/release/examples/spec/Variables/no-split-init.good
no-split-init.chpl:1: In function 'main':
no-split-init.chpl:2: error: 'x' is not initialized and has no type
no-split-init.chpl:2: note: cannot find initialization point to split-init this variable
no-split-init.chpl:3: note: 'x' is used here before it is initialized
