test/release/examples/spec/Variables/no-split-init.chpl
proc main() {
  const x;
  writeln(x);
  x = 5;
}
